tests/fixtures/valid/bytes/bytes_length.py
# Bytes length
a: bytes = b"hello"
b: bytes = b""
c: bytes = b"world!"

print(len(a))
print(len(b))
print(len(c))
