tests/fixtures/invalid/min_str_bytes.py
# Cannot call min() with Str, Bytes
x = min("hello", b"hello")
